--- a/screencombate.ui
+++ b/screencombate.ui
@@ -72,7 +72,7 @@
     </rect>
    </property>
    <property name="maximum">
-    <number>10</number>
+    <number>200</number>
    </property>
    <property name="value">
     <number>5</number>
@@ -107,7 +107,7 @@
     <string notr="true"/>
    </property>
    <property name="maximum">
-    <number>100</number>
+    <number>200</number>
    </property>
    <property name="value">
     <number>50</number>
@@ -162,7 +162,7 @@
     </rect>
    </property>
    <property name="maximum">
-    <number>10</number>
+    <number>200</number>
    </property>
    <property name="value">
     <number>5</number>
@@ -197,19 +197,6 @@
     <string>FUSIÓN</string>
    </property>
   </widget>
-  <widget class="QLabel" name="mensaje2">
-   <property name="geometry">
-    <rect>
-     <x>560</x>
-     <y>490</y>
-     <width>401</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>TextLabel</string>
-   </property>
-  </widget>
   <widget class="QComboBox" name="comboBoxu2">
    <property name="geometry">
     <rect>
@@ -240,7 +227,7 @@
     </rect>
    </property>
    <property name="maximum">
-    <number>100</number>
+    <number>200</number>
    </property>
    <property name="value">
     <number>50</number>
@@ -273,6 +260,26 @@
    </property>
    <property name="text">
     <string>USAR</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="comboBoxc1">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>460</y>
+     <width>121</width>
+     <height>22</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="comboBoxc2">
+   <property name="geometry">
+    <rect>
+     <x>700</x>
+     <y>460</y>
+     <width>121</width>
+     <height>22</height>
+    </rect>
    </property>
   </widget>
  </widget>
