Selección de personajes correcta para el combate
Se ha incluido el fondo para la ventana de combate, modificado el texto de información de combate y se ha llevado la selección de personajes a la ventana de combate.

--- a/resource.qrc
+++ b/resource.qrc
@@ -18,5 +18,6 @@
         <file>minimago.png</file>
         <file>miniclerigo.png</file>
         <file>miniguerrero.png</file>
+        <file>fondo.jpeg</file>
     </qresource>
 </RCC>
