--- a/screencombate.ui
+++ b/screencombate.ui
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>420</y>
+     <y>490</y>
      <width>121</width>
      <height>41</height>
     </rect>
@@ -29,11 +29,111 @@
   <widget class="QLabel" name="mensaje1">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>490</y>
+     <x>340</x>
+     <y>430</y>
      <width>401</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="palette">
+    <palette>
+     <active>
+      <colorrole role="WindowText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>255</green>
+         <blue>255</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Text">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>255</green>
+         <blue>255</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="ToolTipText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>255</green>
+         <blue>255</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </active>
+     <inactive>
+      <colorrole role="WindowText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>255</green>
+         <blue>255</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Text">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>255</green>
+         <blue>255</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="ToolTipText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>255</green>
+         <blue>255</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </inactive>
+     <disabled>
+      <colorrole role="WindowText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>120</red>
+         <green>120</green>
+         <blue>120</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Text">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>120</red>
+         <green>120</green>
+         <blue>120</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="ToolTipText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>255</green>
+         <blue>255</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </disabled>
+    </palette>
+   </property>
+   <property name="font">
+    <font>
+     <family>Nirmala UI Semilight</family>
+     <pointsize>15</pointsize>
+     <weight>75</weight>
+     <italic>false</italic>
+     <bold>true</bold>
+    </font>
    </property>
    <property name="text">
     <string>TextLabel</string>
@@ -42,8 +142,8 @@
   <widget class="QCommandLinkButton" name="Salir">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>530</y>
+     <x>50</x>
+     <y>560</y>
      <width>71</width>
      <height>41</height>
     </rect>
@@ -56,7 +156,7 @@
    <property name="geometry">
     <rect>
      <x>320</x>
-     <y>460</y>
+     <y>530</y>
      <width>121</width>
      <height>22</height>
     </rect>
@@ -85,7 +185,7 @@
    <property name="geometry">
     <rect>
      <x>180</x>
-     <y>420</y>
+     <y>490</y>
      <width>121</width>
      <height>41</height>
     </rect>
@@ -133,7 +233,7 @@
    <property name="geometry">
     <rect>
      <x>320</x>
-     <y>420</y>
+     <y>490</y>
      <width>121</width>
      <height>41</height>
     </rect>
@@ -146,7 +246,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>460</y>
+     <y>530</y>
      <width>121</width>
      <height>22</height>
     </rect>
@@ -188,7 +288,7 @@
    <property name="geometry">
     <rect>
      <x>840</x>
-     <y>420</y>
+     <y>490</y>
      <width>121</width>
      <height>41</height>
     </rect>
@@ -201,7 +301,7 @@
    <property name="geometry">
     <rect>
      <x>560</x>
-     <y>460</y>
+     <y>530</y>
      <width>121</width>
      <height>22</height>
     </rect>
@@ -211,7 +311,7 @@
    <property name="geometry">
     <rect>
      <x>840</x>
-     <y>460</y>
+     <y>530</y>
      <width>121</width>
      <height>22</height>
     </rect>
@@ -240,7 +340,7 @@
    <property name="geometry">
     <rect>
      <x>700</x>
-     <y>420</y>
+     <y>490</y>
      <width>121</width>
      <height>41</height>
     </rect>
@@ -253,7 +353,7 @@
    <property name="geometry">
     <rect>
      <x>560</x>
-     <y>420</y>
+     <y>490</y>
      <width>121</width>
      <height>41</height>
     </rect>
@@ -266,7 +366,7 @@
    <property name="geometry">
     <rect>
      <x>180</x>
-     <y>460</y>
+     <y>530</y>
      <width>121</width>
      <height>22</height>
     </rect>
@@ -276,12 +376,46 @@
    <property name="geometry">
     <rect>
      <x>700</x>
-     <y>460</y>
+     <y>530</y>
      <width>121</width>
      <height>22</height>
     </rect>
    </property>
   </widget>
+  <widget class="QLabel" name="picfondo">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>-10</y>
+     <width>1014</width>
+     <height>630</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <zorder>picfondo</zorder>
+  <zorder>fusion1</zorder>
+  <zorder>mensaje1</zorder>
+  <zorder>Salir</zorder>
+  <zorder>comboBoxu1</zorder>
+  <zorder>barrapoder1</zorder>
+  <zorder>cambiar1</zorder>
+  <zorder>barravida1</zorder>
+  <zorder>picpersonaje1</zorder>
+  <zorder>usar1</zorder>
+  <zorder>comboBoxf1</zorder>
+  <zorder>barrapoder2</zorder>
+  <zorder>picpersonaje2</zorder>
+  <zorder>fusion2</zorder>
+  <zorder>comboBoxu2</zorder>
+  <zorder>comboBoxf2</zorder>
+  <zorder>barravida2</zorder>
+  <zorder>cambiar2</zorder>
+  <zorder>usar2</zorder>
+  <zorder>comboBoxc1</zorder>
+  <zorder>comboBoxc2</zorder>
  </widget>
  <resources/>
  <connections/>
