--- a/screencombate.ui
+++ b/screencombate.ui
@@ -395,6 +395,86 @@
     <string/>
    </property>
   </widget>
+  <widget class="QProgressBar" name="fusionbarra">
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>10</y>
+     <width>91</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="maximum">
+    <number>3</number>
+   </property>
+   <property name="value">
+    <number>0</number>
+   </property>
+   <property name="textVisible">
+    <bool>false</bool>
+   </property>
+  </widget>
+  <widget class="QProgressBar" name="fusionbarra2">
+   <property name="geometry">
+    <rect>
+     <x>590</x>
+     <y>10</y>
+     <width>91</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="maximum">
+    <number>3</number>
+   </property>
+   <property name="value">
+    <number>0</number>
+   </property>
+   <property name="textVisible">
+    <bool>false</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="fusiontext1">
+   <property name="geometry">
+    <rect>
+     <x>300</x>
+     <y>40</y>
+     <width>141</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>HoloLens MDL2 Assets</family>
+     <pointsize>10</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="fusiontext2">
+   <property name="geometry">
+    <rect>
+     <x>560</x>
+     <y>40</y>
+     <width>141</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>HoloLens MDL2 Assets</family>
+     <pointsize>10</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
   <zorder>picfondo</zorder>
   <zorder>fusion1</zorder>
   <zorder>mensaje1</zorder>
@@ -416,6 +496,10 @@
   <zorder>usar2</zorder>
   <zorder>comboBoxc1</zorder>
   <zorder>comboBoxc2</zorder>
+  <zorder>fusionbarra</zorder>
+  <zorder>fusionbarra2</zorder>
+  <zorder>fusiontext1</zorder>
+  <zorder>fusiontext2</zorder>
  </widget>
  <resources/>
  <connections/>
