Audio para el combate
Se han incorporado diferentes audios al programa.
Estos son:, música de fondo para el combate de los dos jugadores, sonidos para los distintos ataques de los personajes y sonidos para las fusiones realizadas.

--- a/resource.qrc
+++ b/resource.qrc
@@ -32,9 +32,16 @@
         <file>PPaladin1_quieto.png</file>
         <file>PPaladin2_ataque.png</file>
         <file>PPaladin2_quieto.png</file>
+        <file>laugh.mp3</file>
+        <file>magic.mp3</file>
+        <file>ouch.mp3</file>
+        <file>Path.mp3</file>
+        <file>poo.mp3</file>
+        <file>sword.mp3</file>
         <file>Obispo1_ataque.png</file>
         <file>Obispo1_quieto.png</file>
         <file>Obispo2_ataque.png</file>
         <file>Obispo2_quieto.png</file>
+        <file>fusion.mpeg</file>
     </qresource>
 </RCC>
