--- a/resource.qrc
+++ b/resource.qrc
@@ -39,5 +39,7 @@
         <file>Obispo2_ataque.png</file>
         <file>Obispo2_quieto.png</file>
         <file>fusion.mpeg</file>
+        <file>tumba1.png</file>
+        <file>tumba2.png</file>
     </qresource>
 </RCC>
